@@ -4,7 +4,7 @@ Motorola Vip : 1960, 1910, 1903, 1963.
 VDR 1.7.29 / 2.1.1
 
 0.23	Infobox for connection Error, not only ERRR on display but also the Infobox
-	Updated EPG filter for Sat.1/Pro7, Rai (13E), TVP (19E)
+	Updated EPG filter for Sat.1/Pro7, Rai (13E), TVP (19E) Polish (13E)
 	channels update.
 	Dynamic audio selection only if number of audio channels > 1 and not "NAR" (uk mostly)
 	<blue> key - EPG info always start at Now.
@@ -14,6 +14,8 @@ VDR 1.7.29 / 2.1.1
 	Removed action 'display EPG/Info' from key 'back', use 'blue' for epg/info
 	Some info while waiting for searchtimer info
 	Updated the resume function to work with the vdr 2.1.1 (changed to decimal ',')
+	Added group 4, some Polish channels (NC+ sorting order)
+	During play '0' jumps to 0:00:00 and now resets posmark index also to 0
 
 
 0.22	Updated EPG filter for 42E, canal sat (tid 1088), canal+ (tid 1060), CDS (veronica, iConcerts, Animax)
